# Happy

./: .gitignore  README.md  pyproject.toml
app/: database.py  init_db.py
app/models/: qweather.py
cron/: cycling_tips.py  save_weather.py
test/: psql_connect.py
tools/: ai.py  astrbot.py  bigmodel.py  qweather.py
