[project]
name = "Happy"
version = "0.1.0"
description = "Home Asset Platform powered by Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "psycopg[binary]>=3.3.3",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
